--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -13,16 +13,16 @@
         android:theme="@style/Theme.Cirep_frontend"
         tools:targetApi="31" >
         <activity
-            android:name=".DashboardMainActivity"
-            android:exported="false"
-            android:label="@string/title_activity_dashboard_main" />
+            android:name="com.example.SplashActivity"
+            android:exported="true">
+            <intent-filter>
+                <action android:name="android.intent.action.MAIN" />
+                <category android:name="android.intent.category.LAUNCHER" />
+            </intent-filter>
+        </activity>
         <activity
-            android:name=".ui.login.LoginActivity"
-            android:exported="false"
-            android:label="@string/title_activity_login" />
-        <activity
-            android:name=".LoginMainActivity"
-            android:exported="false" />
+            android:name="com.example.login.ui.login.LoginActivity">
+        </activity>
     </application>
 
 </manifest>
