--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Wed Mar 15 19:45:51 CET 2023
-sdk.dir=C\:\\Users\\danie\\AppData\\Local\\Android\\Sdk
+#Mon Apr 03 20:08:01 CEST 2023
+sdk.dir=C\:\\Users\\pablo\\AppData\\Local\\Android\\Sdk
