Registro acabado + resultadoOK y Ko acabado + pequeños detalles (falta cuadrar llamada con el back)

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -50,8 +50,7 @@
         <activity
             android:name="com.example.dashboard.DashboardActivity"
             android:exported="false"
-            android:label="@string/title_activity_dashboard"
-            android:theme="@style/Theme.Cirep" />
+            android:label="@string/title_activity_dashboard" />
         <activity
             android:name="com.example.splash.SplashActivity"
             android:exported="true">
