--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Mar 30 18:12:26 CEST 2023
-sdk.dir=C\:\\Users\\aaron\\AppData\\Local\\Android\\Sdk
+#Fri Apr 21 23:56:15 CEST 2023
+sdk.dir=C\:\\Users\\danie\\AppData\\Local\\Android\\Sdk
