--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Thu Apr 27 19:03:59 CEST 2023
-sdk.dir=C\:\\Users\\aaron\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\danie\\AppData\\Local\\Android\\Sdk
