user data session with model fields and camera in progress

--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -22,7 +22,7 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
-            android:name="com.example.dashboard.Camera"
+            android:name="com.example.dashboard.CameraActivity"
             android:exported="false" />
         <activity
             android:name="com.example.dashboard.ReportarIncidencia"
