--- a/local.properties
+++ b/local.properties
@@ -4,5 +4,5 @@
 # Location of the SDK. This is only used by Gradle.
 # For customization when using a Version Control System, please read the
 # header note.
-#Thu Apr 27 19:03:59 CEST 2023
-sdk.dir=C\:\\Users\\danie\\AppData\\Local\\Android\\Sdk
+#Thu Apr 27 19:19:27 CEST 2023
+sdk.dir=C\:\\Users\\pablo\\AppData\\Local\\Android\\Sdk
