--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -20,12 +20,15 @@
         android:fullBackupContent="@xml/backup_rules"
         android:icon="@drawable/icono_app"
         android:label="@string/app_name"
+        android:requestLegacyExternalStorage="true"
         android:roundIcon="@drawable/icono_app"
         android:supportsRtl="true"
-        android:requestLegacyExternalStorage="true"
         android:theme="@style/Theme.Cirep.Light"
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
+        <activity
+            android:name=".DetalleIncidenciaActivity"
+            android:exported="false" />
         <activity
             android:name=".EditProfileActivity"
             android:exported="false" />
@@ -38,7 +41,6 @@
         <activity
             android:name="com.example.register.RegisterActivity"
             android:exported="false" />
-
         <activity
             android:name="com.example.dashboard.ui.perfil.EditProfileActivity"
             android:exported="false" />
@@ -80,6 +82,7 @@
             </intent-filter>
         </activity>
         <activity android:name="com.example.login.ui.login.LoginActivity" />
+
         <service android:name="com.example.comun.MyNotificationService" />
     </application>
 
