Detalles y pantalla de resultado

--- a/local.properties
+++ b/local.properties
@@ -5,4 +5,4 @@
 # For customization when using a Version Control System, please read the
 # header note.
 #Wed May 03 20:44:04 CEST 2023
-sdk.dir=C\:\\Users\\pablo\\AppData\\Local\\Android\\Sdk
+sdk.dir=C\:\\Users\\danie\\AppData\\Local\\Android\\Sdk
