--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -27,22 +27,30 @@
         android:usesCleartextTraffic="true"
         tools:targetApi="31">
         <activity
+            android:name=".ResultReportActivity"
+            android:exported="false" />
+        <activity
+            android:name=".ResultadoReportActivity"
+            android:exported="false"
+            android:label="@string/title_activity_resultado_report"
+            android:theme="@style/Theme.Cirep.Light.NoActionBar" />
+        <activity
             android:name="com.example.incidencia.DetalleIncidenciaActivity"
             android:exported="false" />
         <activity
             android:name=".EditProfileActivity"
             android:exported="false" />
         <activity
-            android:name="com.example.dashboard.CameraActivity"
+            android:name=".CameraActivity"
             android:exported="false" />
         <activity
-            android:name="com.example.dashboard.ReportarIncidencia"
+            android:name=".ReportarIncidencia"
             android:exported="false" />
         <activity
             android:name="com.example.register.RegisterActivity"
             android:exported="false" />
         <activity
-            android:name="com.example.dashboard.ui.perfil.EditProfileActivity"
+            android:name=".ui.perfil.EditProfileActivity"
             android:exported="false" />
         <!--
              TODO: Before you run your application, you need a Google Maps API key.
@@ -65,11 +73,11 @@
             android:value="AIzaSyC2QpV2SMcolMB47b53ZtCzhgWXYDtF6NQ" />
         -->
         <activity
-            android:name="com.example.dashboard.ui.mapa.MapsActivity"
+            android:name=".ui.mapa.MapsActivity"
             android:exported="false"
             android:label="@string/title_activity_maps" />
         <activity
-            android:name="com.example.dashboard.DashboardActivity"
+            android:name=".DashboardActivity"
             android:exported="false"
             android:label="@string/title_activity_dashboard" />
         <activity
